backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: 945253721395.dkr.ecr.us-east-1.amazonaws.com/employee-management-api-app:1.0.0

          ports:
            - containerPort: 3000
