frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 945253721395.dkr.ecr.us-east-1.amazonaws.com/employee-management-api-frontend:1.0.0
        ports:
        - containerPort: 80
